ocpnode/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: ocpnode
    app.kubernetes.io/component: web
    app.kubernetes.io/instance: ocpnode
    app.kubernetes.io/name: ocpnode
    app.kubernetes.io/part-of: ocpnode-app
    app.openshift.io/runtime: shell
  name: ocpnode
spec:
  replicas: 4
  selector:
    matchLabels:
      app: ocpnode
  template:
    metadata:
      labels:
        app: ocpnode
    spec:
      containers:
      - name: ocpnode
        imagePullPolicy: Always
        image: quay.io/ilawson/ocpnode
        ports:
        - containerPort: 8080
          protocol: TCP
