ocpnode/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ocpnode
  name: ocpnode
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: ocpnode
  sessionAffinity: None
  type: ClusterIP
