ocpnode/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: ocpnode
  name: ocpnode
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: ocpnode
    weight: 100
